--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
 	"prefix": "cc.",
-	"token": "NTY0MTg2MzA1MDgxMTE0NjQy.XKkNcQ.yS1TenkHZqBXMPCcWqE1V_di0mI",
+	"token": "Bot Token",
 	"embedColor" : "FFAD41"
 	
 }
