--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^12.5.3",
-    "fuse.js": "^6.5.3"
+    "discord.js": "^14.14.1",
+    "fuse.js": "^6.5.3",
+    "node": "^21.6.2"
   }
 }
